jazykove a typograficke korektury

--- a/songs/dharmovitulaci.tex
+++ b/songs/dharmovitulaci.tex
@@ -1,33 +1,33 @@
 \beginsong{Dharmoví tuláci}[by={Lístek/Jiří Alva Matěk}]
 \beginverse
 \[Hmi]Kola tlučou na spojnicích, krájí \[A]míli za mílí 
-zas se \[Emi]řítíš krajem \[G]spícím v \[A]nočních \[Hmi]košilích 
-obzor se s nebem slívá, co se \[A]do paměti vryl 
-obzor \[Emi]ten, co v dáli \[G]skrývá \[A]Desolation \[Hmi]Hill 
+zas se \[Emi]řítíš krajem \[G]spícím v \[A]nočních \[Hmi]košilích, 
+obzor se s nebem slívá, co se \[A]do paměti vryl, 
+obzor \[Emi]ten, co v dáli \[G]skrývá \[A]Desolation \[Hmi]Hill. 
 \endverse
 \beginstar
 Až se k \[D]ránu vzbudíš zimou, tak \[A]prokleješ, co se dá 
-i celej \[Emi]svět co pod pe\[G]řinou \[A]menší vypa\[Hmi]dá 
-stejně \[D]víš, že cestou tvou, \[A]dokud dejcháš vzduch
-\[Emi]sviští noční \[G]tmou \[A]Půlnoční \[Hmi]duch 
+i celej \[Emi]svět co pod pe\[G]řinou \[A]menší vypa\[Hmi]dá, 
+stejně \[D]víš, že cestou tvou, \[A]dokud dejcháš vzduch,
+\[Emi]sviští noční \[G]tmou \[A]Půlnoční \[Hmi]duch. 
 \endverse
 \beginref
-Půlnoční \[G]duch nestaví a \[A]řítí se tmou 
-tu\[G]láci dharmoví snad \[F#mi]k~cíli dojedou 
+Půlnoční \[G]duch nestaví a \[A]řítí se tmou, 
+tu\[G]láci dharmoví snad \[F#mi]k~cíli dojedou, 
 \[G]blázni zenoví zas \[A]jedou tisíc mil 
-jen \[G]se svou samotou na \[A]Desolation \[Hmi]Hill 
+jen \[G]se svou samotou na \[A]Desolation \[Hmi]Hill. 
 \endverse 
 \beginverse 
-Teď tu sedíš jako slepý, v ruce láhev máš 
-na jméno Ryder Japhy tiše vzpomínáš 
-na mejdany na předměstí a na holky fajnový 
-Japhy, snad budeš mít štěstí na pouti zenový 
+Teď tu sedíš jako slepý, v ruce láhev máš, 
+na jméno Ryder Japhy tiše vzpomínáš, 
+na mejdany na předměstí a na holky fajnový, 
+Japhy, snad budeš mít štěstí na pouti zenový. 
 \endverse
 \beginstar
-Až do tibetskejch hor, kam vedla cesta tvá 
-tam dones jsi svůj vzdor, tam dones jsi svý já 
-tam našel jsi svůj klid zbaven vrozených pout 
-tam našel jsi jak žít bez Telegraph road 
+Až do tibetskejch hor, kam vedla cesta tvá, 
+tam dones jsi svůj vzdor, tam dones jsi svý já, 
+tam našel jsi svůj klid zbaven vrozených pout, 
+tam našel jsi jak žít bez Telegraph road. 
 \endverse 
 \beginref
 Půlnoční duch nestaví\ldots
