--- a/songs/hledani.tex
+++ b/songs/hledani.tex
@@ -12,13 +12,13 @@ co za obzor \[G6]spěch\[F#]á, \[Emi7]kde \[A7sus4]voňavo \[D/F#]tuší.
 Najde, kdo ^hledá, ^šumavské ^slatě,
 mlha se ^zvedá a ^jdou stopy v ^blátě,
 \lrep až na vrch ^pole^dní, ^kde ^modrá se ^nebe, ^ 
-Najde, kdo ^hledá^, ^mně, ^Tebe i ^sebe. \rrep
+Najde, kdo ^hledá^, ^mě, ^Tebe i ^sebe. \rrep
 \endverse
 \beginstar
 \[D/F#]U~selských stolů se \[Emi7]říká, že lidi nestojí \[D/F#]za nic,
 \[D/F#]žene je mamon a \[Emi7]pýcha bez slito\[D/F#]vání a \[A7sus4]hranic, \[A7] 
 \memorize
-\[G6]co se \[F#]za nehet \[Emi7]vejde, \[A7sus4]pravdy, že \[A7]na světě \[D/F#]není,
+\[G6]a co se \[F#]za nehet \[Emi7]vejde, \[A7sus4]pravdy, že \[A7]na světě \[D/F#]není,
 \replay
 ^a než se ^rok s rokem ^sejde, ^andělé s ^čerty se ^žení. 
 \endverse
