--- a/songs/jeruzalem.tex
+++ b/songs/jeruzalem.tex
@@ -2,8 +2,8 @@
 \beginref
 \memorize
 \[C]Koupil jsem \[C7]bílý papír,
-\[F]napsal naň, \[Dmi]to co mě \[G]trápí,
-\[C]najal jsem loď a vy\[G]plul do Jeruza\[C]léma 
+\[F]napsal naň \[Dmi]to, co mě \[G]trápí,
+\[C]najal jsem loď a vy\[G]plul do Jeruza\[C]léma. 
 \endverse
 \beginstar
 \replay
@@ -33,8 +33,8 @@ jak dudák ze Strakonic, všechno anebo nic.
 \endverse
 \beginstar
 \[C]O polívku řekneš si v řeči jidiš,
-\[Ami]o chleba taky i když trochu se stydíš,
-ale \[Dmi]písničku v cizí řeči \[G]tu si nepoří\[C]díš.
+\[Ami]o chleba taky, i když trochu se stydíš,
+ale \[Dmi]písničku v cizí řeči, \[G]tu si nepoří\[C]díš.
 \endverse
 \beginverse
 A tak uprostřed světa v té cizí zemi
@@ -43,7 +43,7 @@ slyšel jsem ticho chorálů i hlas naděje,
 přilétlé ze severu na křídlech tereje.
 \endverse
 \beginverse
-Možná to byl jenom prach ta slza z mého oka,
+Možná to byl jenom prach, ta slza z mého oka,
 v mysl mi vytanula písnička útloboká,
 ve školním autobuse dokola jedna sloka,
 holka modrooká nesedávej u potoka.
