--- a/songs/jestemichvilkuzpivej.tex
+++ b/songs/jestemichvilkuzpivej.tex
@@ -12,7 +12,7 @@ když zpíváš, je mi jak dávno v bezpečí babiččiny peřiny,
 a nemám strach, jen o to jediný -- že už bude konec prázdnin. 
 \endverse
 \beginverse
-Ještě mi zpívej, a já to vážně nikde nepovím, 
+Ještě mi zpívej, já to vážně nikde nepovím, 
 že ti to, no, trošku ujelo, prostě ses netrefila, 
 muzika není pro každého, jen pro ty, co maj' uši hladový, 
 a mně už v uchu hrozně kručelo, a tys' mi ho tak hezky nakrmila. 
