--- a/songs/kazdysinesesvebrime.tex
+++ b/songs/kazdysinesesvebrime.tex
@@ -1,45 +1,46 @@
 \beginsong{Každý si nese své břímě}[by={Jaromír Nohavica}]
 \beginverse
 \[A]Každý si nese své \[D/A]břímě
-letními cestami k zimě
-každý si nese to své
-jak tak životem jde
+letními cestami v zimě,
+každý si nese to své,
+jak tak životem jde.
 \endverse
 \beginverse
-Každý po něčem touží
+Každý po něčem touží,
 každý se pro něco souží
-a nikdo neví
-co mu zítřek zjeví
+a nikdo neví,
+co mu zítřek zjeví.
 \endverse
 \beginref
-\[A]Už otvírá \[D]vrátný brány
-už pofoukal vítr rány
+\[A]Už otvírá \[D]vrátný brány,
+už pofoukal vítr rány,
 po dlouhé noci
-blíží se ráno
+blíží se ráno.
 
-Už jsou komety za půlkou letu
-už se děti můžou těšit na kometu
-na zemi děje se to
-co bylo na nebi psáno
+Už jsou komety za půlkou letu,
+už se děti můžou těšit na kometu,
+na zemi děje se to,
+co bylo na nebi psáno.
 \endverse
 \beginverse
-To zlé spláchne příval
-splní se o čem jsi sníval
-splní se vše
-co jsi kdy chtěl
+To zlé spláchne příval,
+splní se, o čem jsi sníval,
+splní se vše,
+co jsi kdy chtěl.
 \endverse
 \beginverse
-Na dveře listonoš klepe
-říká že bude lépe
-odkud to ví
-to už zapomněl
+Na dveře listonoš klepe,
+říká, že bude lépe,
+odkud to ví,
+to už zapomněl.
 \endverse
-\beginverse
-To zlé spláchne příval
-splní se o čem jsi sníval
-splní se vše
-co jsi kdy chtěl
-\endverse
+% pátá sloka už tam znovu není, minimálně podle nahrávky z Moje smutné srdce
+%\beginverse
+%To zlé spláchne příval
+%splní se o čem jsi sníval
+%splní se vše
+%co jsi kdy chtěl
+%\endverse
 \beginref
 \lrep Každý si nese své břímě \rrep \rep{3}
 \endverse
