--- a/songs/kejklir.tex
+++ b/songs/kejklir.tex
@@ -7,8 +7,8 @@
 Než jsem se \[G]zahleděl do očí \[Ami]tvých,
 do tváře \[Dmi]bílé \[C]jak padlý \[G]sníh.
 Před branou \[Ami]štěstí, \[F]hm, \[Dmi]chvíli jsem \[G]stál,
-\[F]když jsem se za\[(Emi)]milo\[Ami]val. \[Dmi]Há-ha-ha-ha \[G]Há
-\[F]Když jsem se za\[(Emi)]milo\[Ami]val.. 
+\[F]když jsem se za\[(Emi)]milo\[Ami]val. \[Dmi]Há-ha-ha-ha \[G]há,
+\[F]když jsem se za\[(Emi)]milo\[Ami]val. 
 \endverse
 \beginverse 
 Ten král se však rozhněval, že dívka mě ráda má,
@@ -18,7 +18,7 @@ a k vojsku mě zverbovat dal.
 A já teď slyším Tvůj nářek a pláč
 a Ty se, lásko, zoufale ptáš:
 Proč odcházím do boje, hm, bodákům vstříc
-a nemůžu na to nic říct. Há-ha-ha-ha Há
+a nemůžu na to nic říct. Há-ha-ha-ha há,
 a nemůžu na to nic říct.
 \endverse
 \beginverse
@@ -29,7 +29,7 @@ a přesto mi zbylo dost sil.
 Pozvednout kytaru a s ní i hlas,
 že trocha lásky přec zbylo v nás.
 Tak Ti ji posílám, hm, na strunách zní,
-snad k Tobě včas doletí. Há-ha-ha-ha Há
+snad k Tobě včas doletí. Há-ha-ha-ha há,
 snad k Tobě včas doletí.
 \endverse
 \beginverse
@@ -40,7 +40,7 @@ a děcko hned jsem poznal.
 Proč osud dokáže tak krutý být
 a z kalichu smutku já zas musím pít.
 Proč oni jsou nahoře, hm, a já zas níž,
-lásko, co o tom víš? Há-ha-ha-ha Há
+lásko, co o tom víš? Há-ha-ha-ha há,
 lásko, co o tom víš?
 \endverse
 \beginverse
@@ -51,7 +51,7 @@ jsem kejklíř a život je hrou.
 A zas je mým domovem jen širá pláň,
 lásce i osudu zaplatím daň.
 Před branou štěstí, hm, chvíli jsem stál,
-než jsem se zamiloval. Há-ha-ha-ha Há
+než jsem se zamiloval. Há-ha-ha-ha há,
 než jsem se zamiloval.
 \endverse
 \endsong
