--- a/songs/mementovitae.tex
+++ b/songs/mementovitae.tex
@@ -1,37 +1,37 @@
 \beginsong{Memento vitae}[by={Marien}]
 \beginverse
-\[A]Včera jsem se díval na tvé ruce 
-zdá se \[F#mi]mi, jako by \[C#mi]trochu zestár\[D]ly 
-promiň, já \[C#mi]nikdy nebyl zrovna všíma\[D]vý 
-a \[C#mi]najednou, jak šutrem do hla\[D]vy 
-\[Hmi]došlo mi že \[C#mi]jedem rychlík\[D]em, co \[E]těžko zasta\[A]ví.
+\[A]Včera jsem se díval na tvé ruce, 
+zdá se \[F#mi]mi, jako by \[C#mi]trochu zestár\[D]ly. 
+Promiň, já \[C#mi]nikdy nebyl zrovna všíma\[D]vý 
+a \[C#mi]najednou, jak šutrem do hla\[D]vy, 
+\[Hmi]došlo mi, že \[C#mi]jedem rychlík\[D]em, co \[E]těžko zasta\[A]ví.
 \endverse
 \beginverse 
-Tobě zase přišlo děsně vtipný
-že vytrhlas mi z hlavy šedý vlas
-a náhle začal se nám prodlužovat stín
-už neptáme se lístků kopretin
+Tobě zase přišlo děsně vtipný,
+že vytrhlas mi z hlavy šedý vlas.
+A náhle začal se nám prodlužovat stín,
+už neptáme se lístků kopretin,
 a kolikrát jsme vyhlíželi čápy, kdy se vrátí na komín? 
 \endverse
 \beginref
-Pojď ke mě \[F#mi]prosím, ať tě můžu obej\[C#mi]mout, 
-zpíváme \[D]jak nám někdo mává takto\[A]vkou 
-skončí to \[F#mi]dříve, než se stihnem nadech\[H]nout 
-můj vlas v tvé \[Hmi]dlani už je první vlašto\[C#mi]vkou \[C#7]
-doznívá v \[F#mi]ústech sladkost romantických \[C#mi]vět 
-že spolu \[D]zůstaneme až na věky \[A]věků 
-jo holka, \[F#mi]vydrž ještě nejmíň třicet \[H]let 
+Pojď ke mně, \[F#mi]prosím, ať tě můžu obej\[C#mi]mout, 
+zpíváme, \[D]jak nám někdo mává takto\[A]vkou, 
+skončí to \[F#mi]dříve, než se stihnem nadech\[H]nout, 
+můj vlas v tvé \[Hmi]dlani už je první vlašto\[C#mi]vkou. \[C#7]
+Doznívá v \[F#mi]ústech sladkost romantických \[C#mi]vět, 
+že spolu \[D]zůstaneme až na věky \[A]věků, 
+jo, holka, \[F#mi]vydrž ještě nejmíň třicet \[H]let, 
 vyvedem \[Hmi]mladý a než skončí důchoď\[D]ák zvládnem hypoté\[E]ku.
 \endverse
 \beginverse
-Stěží bych si já mohl stěžovat 
-i když mé boty zdobí špína z cest a bláto 
+Stěží bych si já mohl stěžovat, 
+i když mé boty zdobí špína z cest a bláto, 
 i když nám osud rozdal karty v přízemí 
-a složenky nás drží při zemi 
-jsem nejbohatší nejšťastnější mužskej 
+a složenky nás drží při zemi, 
+jsem nejbohatší, nejšťastnější mužskej, 
 když zpod stolu slyším táto.
 \endverse
 \beginref
-Pojď ke mě prosím, ať tě můžu obejmout\ldots
+Pojď ke mně, prosím, ať tě můžu obejmout\ldots
 \endverse
 \endsong
