--- a/songs/nechtenas.tex
+++ b/songs/nechtenas.tex
@@ -6,26 +6,26 @@
 \beginverse
 \[C]Měsíc usnul nad rozpitou nocí 
 a \[Ami]ráno \[Emi]ve frontě \[Ami]na kefír 
-\[F]Objevil že \[Emi]ač chtěl mermo\[F]mocí,
-k \[Ami]tý co včera mířil, \[G]netrefil.
+\[F]objevil, že \[Emi]ač chtěl mermo\[F]mocí,
+k \[Ami]tý, co včera mířil, \[G]netrefil.
 \endverse
 \beginverse
 Zatím v šenku U Kamenných jater 
-Lucie se nocí upila 
+Lucie se nocí upila, 
 ten kulatej blonďák z horních pater 
 zas tak dobrá známost nebyla.
 \endverse
 \beginref
 Místo \[Ami]plachet \[Emi]máme pestrou \[Ami]vinětu,
 vítr \[F]fouká, \[G]tiše zvoní \[C]v láhvo\[G]ví,
-na zdra\[Ami]ví, a \[Emi]sláva nazdar \[Ami]výletu,
+na zdra\[Ami]ví a \[Emi]sláva nazdar \[Ami]výletu,
 nechte \[D7]nás, nechte \[F]nás. \[E]
 My jací jsme jsme \[Ami]takoví. \[Emi Ami F G C G]
 \endverse
 \beginverse 
 U stolu se zalomeným palcem 
 holky s ježkem, kluci s párem náušnic,
-ona laní je, on parním válcem,
+ona laní, on je parním válcem,
 dvanáct kusů, čtyři vodky, dál už nic.
 \endverse
 \beginref
