--- a/songs/nehraloseoceny.tex
+++ b/songs/nehraloseoceny.tex
@@ -13,10 +13,10 @@ i když to věkem bylo sporný.
 \endverse
 \beginref
 Když \[D]na nádraží při pátku 
-nám čekání se kdysi zdálo \[A]dlouhý, 
+nám čekání se vždycky zdálo \[A]dlouhý, 
 víc \[D]než milión v prasátku 
 bylo nabídnutí cigarety \[A]pouhý, 
-tam \[Hmi]vo zábradlí vopřený, dvě kytary 
+tam \[Hmi]o zábradlí opřený, dvě kytary 
 a syrovej sbor \[E7]hlasů,  
 tam \[Hmi]nehrálo se o ceny,
 ale pro radost a ukrácení \[E7]času. 
