--- a/songs/pantarhei.tex
+++ b/songs/pantarhei.tex
@@ -6,37 +6,37 @@
 \endverse
 \beginverse
 \memorize[verse]
-Jak \[C]moudrý \[G]muž musel \[C]kdysi \[G]žít
-\[Ami]tu pravdu \[Emi]znej \[Ami]navě\[Emi]ky
+Jak \[C]moudrý \[G]muž musel \[C]kdysi \[G]žít,
+\[Ami]tu pravdu \[Emi]znej \[Ami]navě\[Emi]ky,
 \replay[verse]
 vzdor ^přísa^hám dvakrát ^nevstou^píš
-^do ^stejné ^ře^ky
+^do ^stejné ^ře^ky.
 \endverse
 \beginverse
 Já nevěřil knihám pradávným
-a zkusil jí zbavit pout
+a zkusil ji zbavit pout,
 tu strhla mne a já bez dechu
-bráním se utonout
+bráním se utonout.
 \endverse
 \beginref 
 \memorize[refrain]
-\[Ami]V podivném rozmaru \[F]naději dáváš
-\[C]v podivném rozmaru \[G]bereš ji zpět
+\[Ami]V podivném rozmaru \[F]naději dáváš,
+\[C]v podivném rozmaru \[G]bereš ji zpět,
 \replay[refrain]
-^pro míle samoty - ^vím, žádná sláva
-^a proč to říkáš ^teprve teď
+^pro míle samoty -- ^vím, žádná sláva
+^a proč to říkáš ^teprve teď.
  \endverse
 \beginverse
 Zas půjdeme zemí zbrázděnou
-od dvou srdcí do dvou stran
+od dvou srdcí do dvou stran,
 snad vyhledám tiché závětří
-a zbavím se chladných rán
+a zbavím se chladných rán.
 \endverse
 \beginverse
-Můj další děj bolí vzpomínkou
+Můj další děj bolí vzpomínkou,
 to nezměním, děj se, co děj
 a na jazyk se mi vtírají
-ta dvě slova: Panta rhei
+ta dvě slova: Panta rhei.
 \endverse
 \beginref
 V podivném rozmaru naději dáváš\ldots
@@ -45,7 +45,7 @@ V podivném rozmaru naději dáváš\ldots
 \beginverse
 Můj další děj bolí vzpomínkou\ldots
 +
-\lrep jen dvě slova: Panta rhei
+\lrep jen dvě slova: Panta rhei,
 ta dvě slova: Panta rhei\ldots\rrep \rep{3}
 \endverse
 
