--- a/songs/pohlidamtvujspanek.tex
+++ b/songs/pohlidamtvujspanek.tex
@@ -1,25 +1,25 @@
 \beginsong{Pohlídám tvůj spánek}[by={Lístek/Jiří Alva Matěk}]
 \capo{6}
 \beginverse
-\[Ami]Vždycky stál si hodně blízko, aby nebolel mě pád
-a \[G]tajemně jsi říkal: \uv{člověk \[Fmaj7]zjistí kam ne\[Emi]patří}.
-Nikdy \[Ami]nebyl jsi ten frajer co z písku staví hrad
+\[Ami]Vždycky stál jsi hodně blízko, aby nebolel mě pád
+a \[G]tajemně jsi říkal: \uv{člověk \[Fmaj7]zjistí, kam ne\[Emi]patří}.
+Nikdy \[Ami]nebyl jsi ten frajer, co z písku staví hrad
 a \[G]z nafouknutejch frází jednu \[Fmaj7]střídá za \[Emi]druhou.
 \endverse
 \beginverse
 Pak s jarem jsi se ztratil a to ráno bylo zlý,
 to ráno jménem prázdno přišlo náhle, za pár dní.
-A jak zimu přihnal čas tak mý dlaně promrzlý
-hřálo jaks mi říkal: \uv{tak už půjdem za duhou}.
+A jak zimu přihnal čas, tak mý dlaně promrzlý
+hřálo, jaks' mi říkal: \uv{tak už půjdem za duhou}.
 \endverse
 \beginref
-Já \[Ami]pohlídám tvůj spánek, tvůj polštář pod hlavou.
-Budu \[G]uragán i vánek, tvou \[Fmaj7]duší toulavou.
+Já \[Ami]pohlídám tvůj spánek, tvůj polštář pod hlavou,
+budu \[G]uragán i vánek tvou \[Fmaj7]duší toulavou.
 Já \[Ami]půjdu tam, kam \[Emi]tvý kroky \[Ami]jdou,
 tam, kam \[Fmaj7]tvý kroky \[Emi]jdou kraji\[Ami]nou.
 \endverse
 \beginverse
-Teď do křídel dám sílu, kterou jenom básník zná
+Teď do křídel dám sílu, kterou jenom básník zná,
 v nedopsaných sbírkách do šuplíků zamčených.
 Co za deštivých nocí pak tajně přebírá
 a s neskrývanou pýchou přitom pálí za sebou.
@@ -27,8 +27,8 @@ a s neskrývanou pýchou přitom pálí za sebou.
 \beginverse
 Ty mosty, který léta každý stavět má,
 mosty, který vedou k zadním vrátkům iluzí.
-Zas je doba tažných ptáků, cestu zpátky otvírá.
-Ty dáš mý dlaně zmrzlý do svý šály, ať nezebou.
+Zas je doba tažných ptáků, cestu zpátky otvírá,
+ty dáš mý dlaně zmrzlý do svý šály, ať nezebou.
 \endverse
 \beginref
 Já pohlídám tvůj spánek\ldots
