--- a/songs/prvnidamacountry.tex
+++ b/songs/prvnidamacountry.tex
@@ -10,8 +10,8 @@
 \[G]ráno ti oči \[Emi]unaví, \[C]jen tou\[D]hy \[G]zůstávají v nás. 
 \endverse
 \beginverse
-Kam se hnu všude plnej sál 
-a všude hrajou jenom mojí píseň. 
+Kam se hnu, všude plnej sál 
+a všude hrajou jenom moji píseň. 
 A tak to běží pořád dál, 
 večer mám prázdný dlaně, v srdci tíseň. 
 \endverse 
