--- a/songs/slapejdal.tex
+++ b/songs/slapejdal.tex
@@ -1,9 +1,9 @@
 \beginsong{Šlapej dál}[by={Spirituál kvintet}]
 \beginverse
 \[Ami]Když svý černý tělo \[Dmi]necejt\[Ami]íš,
-máš týden hlad, žízeň v \[G]blátě \[Ami]spíš,
-musíš jít, \[Ami/G]jen to \[Dmi7]nevzdá\[Ami]vej, tak \[E7]šlapej \[Ami]dál.
-\[E7]šlapej \[Ami]dál
+máš tejden hlad, žízeň, v \[G]blátě \[Ami]spíš,
+musíš jít, \[Ami/G]jen to \[Dmi7]nevzdá\[Ami]vej, tak \[E7]šlapej \[Ami]dál,
+\[E7]šlapej \[Ami]dál.
 \endverse
 \beginref
 \memorize
@@ -24,7 +24,7 @@ pak sám víš, těm už nescházíš, šlapej dál.
 \beginverse
 Je nás víc, nemáme zastání, 
 jen špatnou barvu, špatný vyznání 
-černej mrak, který narůstá, šlapej dál.
+černej mrak, kterej narůstá, šlapej dál.
 \endverse
 \beginref
 \replay
