--- a/songs/stranzatrati.tex
+++ b/songs/stranzatrati.tex
@@ -7,14 +7,14 @@ Pro nás kolikrát jsem hrál a kouzl\[F]il duh\[C]u pro tvů\[G]j den,
 v očích jsem tě hřá\[F]l a víno \[C]míchal se spl\[G]ínem.
 \endverse
 \beginref
-\[G]Stráň \[Ami7]za tra\[D]tí a jedno smutný ráno, 
-\[G]nám\[Ami7] nevrá\[D]tí, to co není dáno, 
-s\[C]~jiným s jinou \[Cmi]krademe svůj \[G]čas, 
+\[G]Stráň \[Ami7]za tra\[D]tí a jedno smutný ráno 
+\[G]nám\[Ami7] nevrá\[D]tí to, co není dáno, 
+s\[C]~jiným, s jinou \[Cmi]krademe svůj \[G]čas, 
 míje\[C]ní a \[Cmi]stesk hluboko v~\[G]nás.
 \endverse
 \beginverse
 Slova kvetou dál, chodíme dál jen v oblacích, 
-to o co jsem stál v cizích dlaních taje jako sníh. 
+to, o co jsem stál, v cizích dlaních taje jako sníh. 
 Spolu každý sám chytáme vítr do dlaní, 
 osud staví rám pro naše věčný hledání.
 \endverse
