--- a/songs/svetjevelkej.tex
+++ b/songs/svetjevelkej.tex
@@ -1,36 +1,36 @@
 \beginsong{Svět je velkej}[by={Ivan Hlas}]
 \beginverse
-\[Ami]Kdybych plakal, když se \[C]jásá
-kdybych \[Emi]hladil, když se \[G]drásá
-kdybych \[Dmi]drásal, když se \[Ami]hladí
-řek by \[C]někdo, \[Emi]že to \[Ami]vadí.
+\[Ami]Kdybych plakal, když se \[C]jásá,
+kdybych \[Emi]hladil, když se \[G]drásá,
+kdybych \[Dmi]drásal, když se \[Ami]hladí,
+řek' by \[C]někdo, \[Emi]že to \[Ami]vadí.
 \endverse
 \beginverse
-Kdybych jásal, když se pláče
-kdybych klesal, když se skáče
-kdybych vrzal, když to ladí
-řek by někdo, že to vadí.
+Kdybych jásal, když se pláče,
+kdybych klesal, když se skáče,
+kdybych vrzal, když to ladí,
+řek' by někdo, že to vadí.
 \endverse
 \beginref
-\[F]A tak, hochu, neplač, \[C]nelkej
-\[Dmi]když si osud zama\[Ami]ne
-\[Dmi]svět je prostornej a \[Emi]velkej
+\[F]A tak, hochu, neplač, \[C]nelkej,
+\[Dmi]když si osud zama\[Ami]ne,
+\[Dmi]svět je prostornej a \[Emi]velkej,
 \[Dmi]leccos možná \[Ami]vyva\[E]ne.
-\[F]Bez trablů to na něm \[C]nejde
-\[Dmi]nejde, hochu, ne a \[Ami]ne
-\[Dmi]do světa se všechno \[Emi]vejde
-\[Dmi]andělé i \[E]satané
+\[F]Bez trablů to na něm \[C]nejde,
+\[Dmi]nejde, hochu, ne a \[Ami]ne,
+\[Dmi]do světa se všechno \[Emi]vejde,
+\[Dmi]andělé i \[E]satané.
 \endverse
 \beginverse
-Kdyby v peklo zvrh se Eden
-kdyby mnoho byl jen jeden
-kdyby klamal ten, kdo radí
-řek by někdo, že to vadí.
+Kdyby v peklo zvrh se Eden,
+kdyby mnoho byl jen jeden,
+kdyby klamal ten, kdo radí,
+řek' by někdo, že to vadí.
 \endverse
 \beginverse
-Až nám budou chystat máry
-až zjistíme, že jsme starý
-že nám vzali naše mládí
+Až nám budou chystat máry,
+až zjistíme, že jsme starý,
+že nám vzali naše mládí,
 komu řeknem, že to vadí?
 \endverse
 \beginref
