--- a/songs/usmejsenasvet.tex
+++ b/songs/usmejsenasvet.tex
@@ -30,10 +30,10 @@ i až budeš \[D]bělovla\[G]sý.
 No a ty zástupy servanejch starců, 
 co nechtěj dál po svejch dvaceti žít. 
 ty pozdrav zdvižením obou svých palců, 
-co oni ví, jak zle může ji být. 
+co oni ví, jak zle může jim být. 
 Těžko je ochránit ty, co jsou hloupý, 
-no tak je nech, voni časem zmizí. 
-On už je někdo za hubučku koupí 
+no tak je nech, oni časem zmizí. 
+On už je někdo za hubičku koupí 
 a řídit bude je televizí. 
 \endverse
 \beginref
