--- a/songs/bluesonepodaneruce.tex
+++ b/songs/bluesonepodaneruce.tex
@@ -7,7 +7,7 @@ a nepozdravit ani známý,
 to žes mi nepodal ruku ani ze zvyku. 
 \endverse
 \beginverse
-Neřek jsi c\[E]okoli, c\[G]okoli, c\[D]okol\[E]i, 
+Neřek' jsi c\[E]okoli, c\[G]okoli, c\[D]okol\[E]i, 
 lži, který n\[F#mi]ebolí, n\[C]ebolí, nebol\[A]í,
 řek' jsi, že z\[E]ášť má moje o\[C#mi]či,
 a to je zř\[A]ejmě těžkej zl\[G]očin,\[F#mi] 
