--- a/songs/hradby.tex
+++ b/songs/hradby.tex
@@ -2,7 +2,7 @@
 \beginverse
 \[Amaj7]Hej proč \[Amaj6]zkouší to teď \[Dmaj6]vzdát, \[Dmaj7] 
 \[Amaj7]když \[Amaj6]došel jsi až \[G]sem, 
-jen vzít slunce \[D]do dlaní a ve stéblech \[Hmi]trávy snít 
+jen vzít slunce \[D]do dlaní a ve stéblech \[Hmi]trávy snít, 
 cosi se \[E]valí a myšlenku nelze zasta\[C#mi]vit, 
 hradby se \[F#mi]bortí a stěží \[E]půjdou opra\[D]vit, 
 jen ve stéblech \[Hmi]trávy snít.\[E] 
@@ -12,7 +12,7 @@ Chabý záblesk z minula,
 příběh těch loňských životů, 
 vsazených do rámu, 
 snad z osmého století, 
-drsný jak dlaně všech lidí co sklízí na polích, 
+drsný jak dlaně všech lidí, co sklízí na polích, 
 pevný jak nepadlé hradby Konstantinopoli, 
 po osm staletí. 
 \endverse
@@ -28,9 +28,9 @@ ve jménu \[Hmi]smíření. \[E]
 V chrámoví zvony dozněly, 
 a bůh ví kde je bůh, 
 čas ideál předků vzal, 
-kdo z nás zůstal Pokorný, 
+kdo z nás zůstal pokorný, 
 čemusi věříš, co nedá se pevně uchopit, 
-chceš vidět anděly dobrá běž se utopit, 
+chceš vidět anděly, dobrá, běž se utopit 
 a splétej si vlastní bič. 
 \endverse
 \beginref
