--- a/songs/kamen.tex
+++ b/songs/kamen.tex
@@ -1,6 +1,6 @@
 \beginsong{Kámen}[by={Ulrychovi}]
 \beginverse*
-Můj kámen. Už ani nevím pokolikáté jsem se s ním
+Můj kámen. Už ani nevím, pokolikáté jsem se s ním
 vláčel do kopce. Ještě nikdy jsem nebyl tak blízko
 cíle jako dnes. Jenomže kousek od vrcholu, jako už
 tolikrát, se mi vysmekl z rukou a skutálel se do údolí.
@@ -12,36 +12,36 @@ ukolébaný zpěvem, který sem odněkud z dálky doléhá.
 A já pomalu sbírám síly k dalšímu pokusu.
 \endverse
 \beginstar
-\[D]Kámen\memorize[verse] \[Gmi6]zdědil sílu \[D]skal
+\[D]Kámen\memorize[verse] \[Gmi6]zdědil sílu \[D]skal,
 \replay[verse]
-kámen ^v říčním proudu ^stál
+kámen ^v říčním proudu ^stál,
 \replay[verse]
-kámen ^orlí hnízda ^zná
+kámen ^orlí hnízda ^zná,
 \replay[verse]
-kámen ^s námi ^zůstává
+kámen ^s námi ^zůstává.
 \endverse
 \beginverse
 \memorize[refrain]
-\[D7]Ví kdo koho měl \[E7/D]rád
-\[Gmi6/D]poznal pýchu i \[D]pád
+\[D7]Ví, kdo koho měl \[E7/D]rád,
+\[Gmi6/D]poznal pýchu i \[D]pád,
 \replay[refrain]
-^ať byl pomník či ^hrad
-^uměl bez bázně ^stát
+^ať byl pomník či ^hrad,
+^uměl bez bázně ^stát,
 \replay[verse]
-cítil zblízka jak ^slunce září
-^chutnal\replay[verse] slzy co ^sklouzly s tváří
-ten ^kámen\replay[verse] ^v žilách lávu ^má
+cítil zblízka jak ^slunce září,
+^chutnal\replay[verse] slzy, co ^sklouzly z tváří,
+ten ^kámen\replay[verse] ^v žilách lávu ^má,
 \replay[verse]
-kámen ^žárem plápo^lá 
+kámen ^žárem plápo^lá. 
 \endverse
 \beginverse
 Vrátí ozvěnou zpět
-příboj falešných vět
+příboj falešných vět,
 věčně daleký cíl
-pro tvůj bláznivý let
-až pak překonáš pláně moří
-zpátky k majákům křídla složíš
-svá křídla dálkou trápená
-kámen země slíbená
+pro tvůj bláznivý let,
+až pak překonáš pláně moří,
+zpátky k majákům křídla složíš,
+svá křídla dálkou trápená,
+kámen, země slíbená.
 \endverse
 \endsong
