--- a/songs/krasojezdkyne.tex
+++ b/songs/krasojezdkyne.tex
@@ -2,7 +2,7 @@
 \capo{2}
 \beginverse
 \memorize
-\[Emi]přijel jsem \[C]na chvíli \[D]pozdravit \[H7]přátele,
+\[Emi]Přijel jsem \[C]na chvíli \[D]pozdravit \[H7]přátele,
 \replay
 ^po hospodách ^vést silácké ^řeči, ^
 \replay
@@ -25,7 +25,7 @@ jsem na cestě a toužím po návratu.
 Čas je šarlatán a věci sotva změní,
 tahleta zastávka byla jen na znamení,
 naše cesty už se asi těžko zkříží,
-hledám tě v Babylóně, a ty jsi v Paříži.
+hledám tě v Babylóně a ty jsi v Paříži.
 \endverse
 \beginref
 Krasojezdkyně, sestro akrobatů\ldots
