--- a/songs/krestantoreknejlip.tex
+++ b/songs/krestantoreknejlip.tex
@@ -1,47 +1,47 @@
-\beginsong{Křesťan to řek nejlíp}[by={Humbuk}]
+\beginsong{Křesťan to řek' nejlíp}[by={Humbuk}]
 \capo{2}
 \prefersharps
 \beginverse
-\[Ami]Jendněch hojnost je \[G]pro jiný hlad,
+\[Ami]Jedněch hojnost je \[G]pro jiný hlad,
 \[F]jedněch jistě je \[G]pro jiný snad,
 \[Ami]jedněch lehni je \[G]pro jiný vstaň,
-\[F]jedněch pěst je \[E]pro jiný \[Ami]dlaň,
+\[F]jedněch pěst je \[E]pro jiný \[Ami]dlaň.
 \endverse
 \beginverse
 Jedněch touha je pro jiný chtíč,
 jedněch dílo je pro jiný kýč,
 jedněch prostor je pro jiný klec,
-jedněch pravda je pro jiný kec,
+jedněch pravda je pro jiný kec.
 \endverse
 \beginverse
-jedněch blábol je pro jiný věta,
+Jedněch blábol je pro jiný věta,
 jedněch právo je pro jiný veta,
 jedněch zápor je pro jiný klad,
-jedněch almužna je pro jiný plat,
+jedněch almužna je pro jiný plat.
 \endverse
 \beginref
 \[F]Když oči jak brány \[C]zavřem,
 je tu \[G]noc jak černej \[Ami]mák,
 jsme \[F]ve válce, je \[C]válka v nás,
-a \[G]zase nao\[Ami]pak
-\[F]Křesťan to řek \[C]nejlíp,
-řek kde \[G]klíč brána \[Ami]má,
-\[F]Tak otevři \[C]oči, ta \[F]hloupá noc \[C]končí a mír je \[G]mezi ná\[Ami]ma
+a \[G]zase nao\[Ami]pak.
+\[F]Křesťan to řek' \[C]nejlíp,
+řek', kde \[G]klíč brána \[Ami]má.
+\[F]Tak otevři \[C]oči, ta \[F]hloupá noc \[C]končí a mír je \[G]mezi ná\[Ami]ma.
 \endverse
 \beginverse
 Jedněch sen je pro jiný běs,
 jedněch zítra je pro jiný dnes,
 jedněch skřeky jsou pro jiný zpěv,
-jedněch voda je pro jiný krev,
+jedněch voda je pro jiný krev.
 \endverse
 \beginverse
-jedněch kůl je pro jiný plot,
+Jedněch kůl je pro jiný plot,
 jedněch vesmír je pro jiný bod,
 jedněch pitbul je pro jiný pinč,
-jedněch soudce je pro jiný linč,
+jedněch soudce je pro jiný lynč.
 \endverse
 \beginverse
-jedněch výkřik je pro jiný šepot,
+Jedněch výkřik je pro jiný šepot,
 jedněch prohra je pro jiný jackpot,
 jedněch polez je pro jiný leť,
 jedněch černá je pro jiný pleť.
@@ -53,16 +53,16 @@ Když oči jak brány zavřem\ldots
 Jedněch prorok je pro jiný lhář,
 jedněch maska je pro jiný tvář,
 jedněch ztráta je pro jiný zisk,
-jedněch belhání je pro jiný trysk,
+jedněch belhání je pro jiný trysk.
 \endverse
 \beginverse
-jedněch Honza je pro jiný Jan,
+Jedněch Honza je pro jiný Jan,
 jedněch hračka je pro jiný zbraň,
 jedněch start je pro jiný stop,
-jedněch podlaha je pro jiný strop,
+jedněch podlaha je pro jiný strop.
 \endverse
 \beginverse
-jedněch drama je pro jiný fraška,
+Jedněch drama je pro jiný fraška,
 jedněch setkání je pro jiný srážka,
 jedněch křišťál je pro jiný plast,
 jedněch bolest je pro jiný slast.
