--- a/FF/songs.tex
+++ b/FF/songs.tex
@@ -8,6 +8,7 @@
 \input{songs/fram.tex}
 \input{songs/hledani.tex}
 \input{songs/hradby.tex}
+\input{songs/jastebouzitnebudu.tex}
 \input{songs/jeruzalem.tex}
 \input{songs/jestemichvilkuzpivej.tex}
 \input{songs/kamen.tex}
