Added macro rfloat for floating chords to the right of the song.

--- a/FF/ff.tex
+++ b/FF/ff.tex
@@ -23,6 +23,7 @@
 \usepackage[czech]{babel}
 \usepackage[bookmarks]{hyperref}
 \usepackage[chorded,noshading]{songs}
+\usepackage{custom}
 \usepackage[cm]{fullpage}
 % \includeonlysongs{2}
 
