--- a/songs/jastebouzitnebudu.tex
+++ b/songs/jastebouzitnebudu.tex
@@ -1,4 +1,7 @@
 \beginsong{Já s tebou žít nebudu}[by={Nerez}]
+\rfloat{
+\gtab{Edim}{002323}\\
+\gtab{Ebdim}{001212}}
 \beginverse
 \[Emi]Bylas' jak poslední hlt \[F#7]vína, 
 \[H7]sladká a k ránu \[Emi]bolavá, \[Edim]\[H7]
