Moved chord tabelatures to the right to save space.

--- a/songs/hradby.tex
+++ b/songs/hradby.tex
@@ -1,4 +1,9 @@
 \beginsong{Hradby}[by={Marien}]
+\rfloat{
+\gtab{Amaj7}{X02120}\\
+\gtab{Amaj6}{X02222}\\
+\gtab{Dmaj6}{XX0202}\\
+\gtab{Dmaj7}{XX0222}}
 \beginverse
 \[Amaj7]Hej proč \[Amaj6]zkouší to teď \[Dmaj6]vzdát, \[Dmaj7] 
 \[Amaj7]když \[Amaj6]došel jsi až \[G]sem, 
@@ -36,8 +41,4 @@ a splétej si vlastní bič.
 \beginref
 Dej bůh nám malým\ldots
 \endverse
-\gtab{Amaj7}{X02120}
-\gtab{Amaj6}{X02222}
-\gtab{Dmaj6}{XX0202}
-\gtab{Dmaj7}{XX0222}
 \endsong
