--- a/songs/kazdysinesesvebrime.tex
+++ b/songs/kazdysinesesvebrime.tex
@@ -1,4 +1,7 @@
 \beginsong{Každý si nese své břímě}[by={Jaromír Nohavica}]
+\rfloat{
+\gtab{A}{X0242X}
+\gtab{D/A}{X0423X}}
 \beginverse
 \[A]Každý si nese své \[D/A]břímě
 letními cestami v zimě,
@@ -61,6 +64,4 @@ A I-0---------------------0----------------------I
 E I----------------------------------------------I
 \endverse
 \minfrets=2
-\gtab{A}{X0242X}
-\gtab{D/A}{X0423X}
 \endsong
