Added song tmavomodrysvet.

--- a/FF/songs.tex
+++ b/FF/songs.tex
@@ -29,4 +29,5 @@
 \input{songs/stranzatrati.tex}
 \input{songs/svetjevelkej.tex}
 \input{songs/slapejdal.tex}
+\input{songs/tmavomodrysvet.tex}
 \input{songs/usmejsenasvet.tex}
