Little fixes for tmavomodry svet

--- a/songs/tmavomodrysvet.tex
+++ b/songs/tmavomodrysvet.tex
@@ -6,7 +6,7 @@
 	\gtab{D\textsuperscript{\#}dim}{004545}
 }
 \beginstar
-\[D]Netoliko, \[B9]že je tma, \[D]ale \[B9]nev\[A7]idí\[D]m \[A7]
+\[D]Netoliko, \[B9]že je tma, \[D]ale \[B9]nev\[A7]idím\[D] \[A7]
 \[D]Vím, že je tu \[B9]všude tma, \[D]já ji \[A7]nevi\[D]dím
 \[B]Vidím jenom to, \[D]že nevidím nic
 \[B]když připustím, že vidím, měl bych \[E7]vidět \[A7]víc
@@ -20,8 +20,7 @@ tmavo\[B9]mo\[A7]drý \[D]mrak\[A7]
 \endverse
 \beginverse
  \replay[verse]
-^Sám
-^nevím ani kudy jíti mám a ^kam
+^Sám ^nevím ani kudy jíti mám a ^kam
 a to, že na hlavě tmavomodrý klobouk ^mám
 to je ^prá^vě ^klam \[G7] \[D]
 \endverse
@@ -33,8 +32,7 @@ to je ^prá^vě ^klam \[G7] \[D]
 \endverse
 \beginverse
 \replay[verse]
-^Pět
-^neděl, sedm hodin, tři měsíce a šest ^let
+^Pět ^neděl, sedm hodin, tři měsíce a šest ^let
 melancholicky jsem pozoroval ^svět
 tmavo^mod^rý ^svět.
 \endverse
