--- a/songs/kazdysinesesvebrime.tex
+++ b/songs/kazdysinesesvebrime.tex
@@ -1,9 +1,9 @@
 \beginsong{Každý si nese své břímě}[by={Jaromír Nohavica}]
 \rfloat{
-\gtab{A}{X0242X}
+\gtab{Aadd9}{X0242X}
 \gtab{D/A}{X0423X}}
 \beginverse
-\[A]Každý si nese své \[D/A]břímě
+\[Aadd9]Každý si nese své \[D/A]břímě
 letními cestami v zimě,
 každý si nese to své,
 jak tak životem jde.
@@ -15,7 +15,7 @@ a nikdo neví,
 co mu zítřek zjeví.
 \endverse
 \beginref
-\[A]Už otvírá \[D]vrátný brány,
+\[Aadd9]Už otvírá \[D]vrátný brány,
 už pofoukal vítr rány,
 po dlouhé noci
 blíží se ráno.
