Fixed too long space.

--- a/songs/kazdysinesesvebrime.tex
+++ b/songs/kazdysinesesvebrime.tex
@@ -15,7 +15,7 @@ a nikdo neví,
 co mu zítřek zjeví.
 \endverse
 \beginref
-\[Aadd9]Už otvírá \[D]vrátný brány,
+\[Aadd9]Už~otvírá \[D]vrátný brány,
 už pofoukal vítr rány,
 po dlouhé noci
 blíží se ráno.
