Drobne opravy prevod filimi na capo misto divokych akordu.

--- a/songs/filimi.tex
+++ b/songs/filimi.tex
@@ -1,63 +1,64 @@
 \beginsong{Fi-li-mi}[by={Spirituál kvintet}]
+\capo{3}
 \beginverse
-\[Fmi]Čert aby vzal už tuhle trať, 
-   kdo hl\[G#]edáš práci, tak se ztrať, 
-   \[Fmi]že nemáš prachy, no tak ať, 
-   jó, tak se \[Cmi]na to \[Fmi]dívám!
+\[Dmi]Čert aby vzal už tuhle trať,
+   kdo hl\[F]edáš práci, tak se ztrať,
+   \[Dmi]že nemáš prachy, no tak ať,
+   jó, tak se \[Ami]na to \[Dmi]dívám!
 \endverse
 \beginref
-\[Fmi]Fi-li-mi-jo-ri-jú-ri-ej, 
-   \[G#]fi-li-mi-jo-ri-jú-ri-ej, 
-   \[Fmi]fi-li-mi-jo-ri-jú-ri-ej, 
-   vo tom si \[Cmi]teď \[Fmi]zpívám. 
+\[Dmi]Fi-li-mi-jo-ri-jú-ri-ej,
+   \[F]fi-li-mi-jo-ri-jú-ri-ej,
+   \[Dmi]fi-li-mi-jo-ri-jú-ri-ej,
+   vo tom si \[Ami]teď \[Dmi]zpívám.
 \endverse
 \beginverse
-Jen pražec chop a kolej suň, 
-   chyť lano, táhni jako kůň, 
-   pod tíhou jako medvěd fuň, 
-   jó, tak se na to dívám! 
-\endverse
-\beginref
-Fi-li-mi\ldots
-\endverse
-\beginverse
-Z kůže se loupeš jako had, 
-   je vedro, že by jeden pad', 
-   na vodu smíš jen vzpomínat, 
-   jó, tak se na to dívám! 
-\endverse
-\beginverse
-Když konečně máš vody dost, 
-   určitě přes ni stavíš most, 
-   kláda ti ráda zlomí kost, 
-   jó, tak se na to dívám! 
+Jen pražec chop a kolej suň,
+   chyť lano, táhni jako kůň,
+   pod tíhou jako medvěd fuň,
+   jó, tak se na to dívám!
 \endverse
 \beginref
 Fi-li-mi\ldots
 \endverse
 \beginverse
-Na rukách už jsem potěžkal 
-   většinu těch okolních skal, 
-   ještě to cejtí každej sval, 
-   jó, vo tom si teď zpívám! 
+Z kůže se loupeš jako had,
+   je vedro, že by jeden pad',
+   na vodu smíš jen vzpomínat,
+   jó, tak se na to dívám!
+\endverse
+\beginverse
+Když konečně máš vody dost,
+   určitě přes ni stavíš most,
+   kláda ti ráda zlomí kost,
+   jó, tak se na to dívám!
 \endverse
 \beginref
 Fi-li-mi\ldots
 \endverse
 \beginverse
-Slunce už dělá z trávy troud, 
-   jen kdybych se směl vodsaď hnout, 
-   na tuhle trať zapomenout, 
-   jó, tak se na to dívám! 
+Na rukách už jsem potěžkal
+   většinu těch okolních skal,
+   ještě to cejtí každej sval,
+   jó, vo tom si teď zpívám!
 \endverse
 \beginref
 Fi-li-mi\ldots
 \endverse
 \beginverse
-Jen Bůh mi víru zachovej 
-   a nasednout mi sílu dej, 
-   můj \[Fmi]vagón bude \[Cmi]pérovej, 
-   jó, \[Bmi]vo tom \[Cmi]si teď zp\[Fmi]ívám! 
+Slunce už dělá z trávy troud,
+   jen kdybych se směl vodsaď hnout,
+   na tuhle trať zapomenout,
+   jó, tak se na to dívám!
+\endverse
+\beginref
+Fi-li-mi\ldots
+\endverse
+\beginverse
+Jen Bůh mi víru zachovej
+   a nasednout mi sílu dej,
+   můj \[Dmi]vagón bude \[Bb]pérovej,
+   jó, \[Gmi]vo tom \[Ami]si teď zp\[Dmi]ívám!
 \endverse
 \beginref
 Fi-li-mi\ldots
