--- a/songs/hradby.tex
+++ b/songs/hradby.tex
@@ -5,38 +5,38 @@
 \gtab{Dmaj6}{XX0202}\\
 \gtab{Dmaj7}{XX0222}}
 \beginverse
-\[Amaj7]Hej proč \[Amaj6]zkouší to teď \[Dmaj6]vzdát, \[Dmaj7] 
-\[Amaj7]když \[Amaj6]došel jsi až \[G]sem, 
-jen vzít slunce \[D]do dlaní a ve stéblech \[Hmi]trávy snít, 
-cosi se \[E]valí a myšlenku nelze zasta\[C#mi]vit, 
-hradby se \[F#mi]bortí a stěží \[E]půjdou opra\[D]vit, 
-jen ve stéblech \[Hmi]trávy snít.\[E] 
-\endverse
-\beginverse 
-Chabý záblesk z minula, 
-příběh těch loňských životů, 
-vsazených do rámu, 
-snad z osmého století, 
-drsný jak dlaně všech lidí, co sklízí na polích, 
-pevný jak nepadlé hradby Konstantinopoli, 
-po osm staletí. 
-\endverse
-\beginref
-\[A]Dej bůh nám malým malé \[Hmi]trápení, 
-co dá se \[E]unést a co se časem zaho\[A]jí, \[E]
-\[A]dej bůh nám sílu bránit \[Hmi]vlastní hrad, 
-aby tu \[E]kámen na kameni mohl chvíli \[C#mi]stát, 
-ať lidé \[F#mi]doznají klidu \[E]pasoucích se \[D]stád, 
-ve jménu \[Hmi]smíření. \[E] 
+\[Amaj7]Hej proč \[Amaj6]zkouší to teď \[Dmaj6]vzdát, \[Dmaj7]
+\[Amaj7]když \[Amaj6]došel jsi až \[G]sem,
+jen vzít slunce \[D]do dlaní a ve stéblech \[Hmi]trávy snít,
+cosi se \[E]valí a myšlenku nelze zasta\[C#mi]vit,
+hradby se \[F#mi]bortí a stěží půjdou \[E]opra\[D]vit, 
+jen ve stéblech \[Hmi]trávy snít.\[E]
 \endverse
 \beginverse
-V chrámoví zvony dozněly, 
-a bůh ví kde je bůh, 
-čas ideál předků vzal, 
-kdo z nás zůstal pokorný, 
-čemusi věříš, co nedá se pevně uchopit, 
-chceš vidět anděly, dobrá, běž se utopit 
-a splétej si vlastní bič. 
+Chabý záblesk z minula,
+příběh těch loňských životů,
+vsazených do rámu,
+snad z osmého století,
+drsný jak dlaně všech lidí, co sklízí na polích,
+pevný jak nepadlé hradby Konstantinopoli,
+po osm staletí.
+\endverse
+\beginref
+\[A]Dej bůh nám malým malé \[Hmi]trápení,
+co dá se \[E]unést a co se časem zaho\[A]jí, \[E]
+\[A]dej bůh nám sílu bránit \[Hmi]vlastní hrad,
+aby tu \[E]kámen na kameni mohl chvíli \[C#mi]stát,
+ať lidé \[F#mi]doznají klidu \[E]pasoucích se \[D]stád,
+ve jménu \[Hmi]smíření. \[E]
+\endverse
+\beginverse
+V chrámoví zvony dozněly,
+a bůh ví kde je bůh,
+čas ideál předků vzal,
+kdo z nás zůstal pokorný,
+čemusi věříš, co nedá se pevně uchopit,
+chceš vidět anděly, dobrá, běž se utopit
+a splétej si vlastní bič.
 \endverse
 \beginref
 Dej bůh nám malým\ldots
