Upraveno nastaveni baliku hyperref aby byly odkazy modre nepodtrzene.

--- a/FF/ff.tex
+++ b/FF/ff.tex
@@ -21,7 +21,7 @@
 \documentclass[a5paper,twoside,11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[czech]{babel}
-\usepackage[bookmarks]{hyperref}
+\usepackage[bookmarksopen,colorlinks,plainpages=false,linkcolor=blue]{hyperref}
 \usepackage[chorded,noshading]{songs}
 \usepackage{custom}
 \usepackage[cm]{fullpage}
