--- a/songs/kometa.tex
+++ b/songs/kometa.tex
@@ -12,9 +12,9 @@ my už tu nebudem, ach, pýcho marnivá,
 spatřil jsem kometu, chtěl jsem jí zazpívat.
 \endverse
 \beginref
-\[Ami]O vodě, \[Dmi]o trávě, o lese,
-\[G7]o smrti, se kterou smířit n\[C]ejde se,\[E]
-\[Ami]o lásce, o zradě, \[Dmi]o světě
+\[Ami]O~vodě, o~trávě, \[Dmi]o~lese,
+\[G7]o~smrti, se kterou smířit n\[C]ejde se,\[E]
+\[Ami]o~lásce, o zradě, \[Dmi]o~světě
 \[E]a o všech lidech, co \[E7]kdy žili na téhle pl\[Ami]anetě.\[Emi]
 \endverse
 \beginverse
