Pridano spinkej do sousoveho zpevniku.

--- a/Sous16/songs.tex
+++ b/Sous16/songs.tex
@@ -1,4 +1,5 @@
 \input{songs/ctverorocnichobdobi.tex}
 \input{songs/kometa.tex}
+\input{songs/spinkej.tex}
 \input{songs/trinactka.tex}
 \input{songs/usmejsenasvet.tex}
