Pridany pisne do sousoveho zpevniku.

--- a/Sous16/songs.tex
+++ b/Sous16/songs.tex
@@ -1,5 +1,10 @@
 \input{songs/ctverorocnichobdobi.tex}
+\input{songs/jastebouzitnebudu.tex}
+\input{songs/jezisek.tex}
 \input{songs/kometa.tex}
+\input{songs/promeny.tex}
+\input{songs/sneciblues.tex}
 \input{songs/spinkej.tex}
 \input{songs/trinactka.tex}
 \input{songs/usmejsenasvet.tex}
+\input{songs/velminesmela.tex}
