Vyhozena jedna pisen ze sousoveho zpevniku a drobne opravy v jinych.

--- a/songs/husita.tex
+++ b/songs/husita.tex
@@ -58,7 +58,7 @@ v trávě leží klobouk, čípak mohl být,
 prý kardinála z Itálie, 
 tam v tý trávě zítra budeme se mít 
 já a moje Marie, jó, 
-ať miluje, kdo žije, jó, 
-ať žije historie! 
+\[C]ať miluje, \[G]kdo ži\[Ami]je, \[F]jó, 
+\[C]ať žije his\[G]tori\[C]e! 
 \endverse
 \endsong
