--- a/songs/kometa.tex
+++ b/songs/kometa.tex
@@ -15,7 +15,7 @@ spatřil jsem kometu, chtěl jsem jí zazpívat.
 \[Ami]O~vodě, o~trávě, \[Dmi]o~lese,
 \[G7]o~smrti, se kterou smířit n\[C]ejde se,\[E]
 \[Ami]o~lásce, o zradě, \[Dmi]o~světě
-\[E]a o všech lidech, co \[E7]kdy žili na téhle pl\[Ami]anetě.\[Emi]
+\[E]a o všech lidech, co \[E7]kdy žili na téhle pl\[Ami]anetě.
 \endverse
 \beginverse
 Na hvězdném nádraží cinkají vagóny,
@@ -48,6 +48,6 @@ my už tu nebudem, ale jiný jí zazpívá.
 O vodě, o trávě, o lese,
 o smrti, se kterou smířit nejde se,
 o lásce, o zradě, o světě,
-bude to písnička o nás a kometě\ldots
+bude to písnička o nás a kometě.
 \endverse
 \endsong
