--- a/songs/promeny.tex
+++ b/songs/promeny.tex
@@ -49,7 +49,7 @@ Přece tvoja nebudu ani jednu hodinu.
 A sú u nás doma takoví hvězdáři,
 co vypočítajú hvězdičky na nebi.
 A ty musíš býti má, lebo mi tě Pán Bůh dá.
-A ty musíš býti má, lebo mi tě Pán Bůh dá\ldots
+A ty musíš býti má, lebo mi tě Pán Bůh dá.
 \[\lrep Ami F C F C G \rrep{} Ami]
 \endverse
 \endsong
