--- a/songs/spinkej.tex
+++ b/songs/spinkej.tex
@@ -2,11 +2,11 @@
 \beginverse
 \memorize
 Už se k\[C]ončí den, už j\[F]e čas k spánku,
-zd\[C]i se barví \[F]od červánků,
-hl\[C]eď, už lampář \[Ami]světla rozsvěc\[G]í,
+\[C]zdi se barví \[F]od červánků,
+\[C]hleď, už lampář \[Ami]světla rozsvěc\[G]í,
 \replay
 tak si d^očti stránku, z^avři knížku,
-h^onem hupky d^o pelíšku,
+^honem hupky d^o pelíšku,
 ^koťata dávno ^vrní za pec^í.
 \endverse
 \beginref
