Pridan pohar a kalich do zpevniku sousu.

--- a/Sous16/songs.tex
+++ b/Sous16/songs.tex
@@ -3,6 +3,7 @@
 \input{songs/husita.tex}
 \input{songs/jezisek.tex}
 \input{songs/kometa.tex}
+\input{songs/poharakalich.tex}
 \input{songs/promeny.tex}
 \input{songs/spinkej.tex}
 \input{songs/sneciblues.tex}
