Transpozice zabili do C a oprava. Drobne opravy tmavomodrysvet.

--- a/songs/tmavomodrysvet.tex
+++ b/songs/tmavomodrysvet.tex
@@ -3,7 +3,8 @@
 	\gtab{B9}{113311}\\
 	\gtab{E9}{022102}\\
 	\gtab{Gmi6}{355353}\\
-	\gtab{D\textsuperscript{\#}dim}{004545}
+	\gtab{D\textsuperscript{\#}dim}{004545}\\
+	\gtab{D9}{XX0230}
 }
 \beginstar
 \[D]Netoliko, \[B9]že je tma, \[D]ale \[B9]nev\[A7]idím\[D] \[A7]
@@ -22,7 +23,7 @@ tmavo\[B9]mo\[A7]drý \[D]mrak\[A7]
  \replay[verse]
 ^Sám ^nevím ani kudy jíti mám a ^kam
 a to, že na hlavě tmavomodrý klobouk ^mám
-to je ^prá^vě ^klam \[G7] \[D]
+to je ^prá^vě ^klam
 \endverse
 \beginref
 \[B]Nemám hlad, tak co mi naplat
