--- a/songs/zabili.tex
+++ b/songs/zabili.tex
@@ -1,12 +1,12 @@
 \beginsong{Zabili}[by={Balada pro banditu}]
 \beginverse
-\[G]Zabili, \[C]zabili \[Ami]chlapa z \[C]Kolo\[G]čavy, 
-\[G]řekněte \[C]hrobaři, \[Ami]kde je \[C]pocho\[G]vaný. 
+\[C]Zabili, \[F]zabili \[Dmi]chlapa z \[F]Kolo\[C]čavy, 
+\[C]řekněte \[F]hrobaři, \[Dmi]kde je \[F]pocho\[C]vaný. 
 \endverse
 \beginref
-\[G]Bylo tu, není tu, havrani \[C]na plotu, 
-\[G]bylo víno v sudě, teď tam voda \[D]bude, 
-\[G]není, \[D]není \[G]tu. 
+\[C]Bylo tu, není tu, havrani \[F]na plotu, 
+\[C]bylo víno v sudě, \[F]teď tam voda \[G]bude, 
+\[C]není, \[G]není \[C]tu. 
 \endverse
 \beginverse
 Špatně ho zabili, špatně pochovali, 
