Pridany Zlocinec a Za tri ctvrte stoleti.

--- a/FF/songs.tex
+++ b/FF/songs.tex
@@ -33,3 +33,5 @@
 \input{songs/tmavomodrysvet.tex}
 \input{songs/usmejsenasvet.tex}
 \input{songs/zabili.tex}
+\input{songs/zatrictvrtestoleti.tex}
+\input{songs/zlocinec.tex}
