--- a/songs/bitvaokarluvmost.tex
+++ b/songs/bitvaokarluvmost.tex
@@ -5,13 +5,13 @@
 \[C]barokní \[G]sochy v \[C]letním jasu 
 \[C]sedí tu \[F]jako hejno \[C]vos. 
 \lrep \[Ami]Má vlasy \[Emi]do pasu a \[F]jen tak pro rado\[C]st, 
-\[C]nabízí \[G]ortel nebo \[C(G)]spásu, \rrep
-\[C]v bitvě o Karlův most. 
+\[C]nabízí \[G]ortel nebo \[C(F)]spásu, \rrep
+v bitvě o Karlův \[C]most. 
 \endverse
 \beginref
 \[Emi]To pro \[F]tebe král Karel \[C]Čtvrtý, 
 \[F]má \[Emi]lásko vlasa\[Dmi]tá, 
-\lrep \[G]dával \[C]do malty \[F]žloutek 
+\lrep \[G]dá\[C]val do malty \[F]žloutek 
 a mrhal \[Dmi]úsilím a \[C]pruty \[F]ze zla\[C]ta. \rrep 
 \endverse
 \beginverse
@@ -20,7 +20,7 @@ svůj bledej šampónovej chvost
 a svádí právě toho času 
 bitvu o Karlův most. 
 \lrep Má v očích muškety, děla a čeká na Švéda, 
-klíč ke zbrojnici těla až na Kampě mu dá. \rrep
+\[C]klíč \[G]ke zbrojnici \[F]těla až na Kampě mu \[C]dá. \rrep
 \endverse
 \beginref
 To pro tebe král Karel Čtvrtý\ldots 
@@ -30,8 +30,8 @@ Máš vlasy dlouhý do půl pasu,
 tvou svatou válku vidí most, 
 barokní sochy v letním jasu 
 a Němců kolem jako vos. 
-Máš vlasy do pasu a jen tak pro radost 
-nabízíš ortel nebo spásu. 
+\lrep Máš vlasy do pasu a jen tak pro radost 
+nabízíš ortel nebo spásu. \rrep
 \lrep \[F]v bitvě o Karlův \[C]most \rrep \rep{3}
 \endverse
 \endsong
