--- a/songs/casysemeni.tex
+++ b/songs/casysemeni.tex
@@ -1,7 +1,8 @@
 \beginsong{Časy se mění}[by={Nezmaři}]
+\rfloat{\gtab{F6}{113231}}
 \beginverse
-\[C]Svět mění svou \[Ami]tvář \[F6]a den stíhá \[C]den, 
-jenom blázen \[F]ostatním \[Dmi]v cestě by \[G]stál 
+\[C]Svět mění svou \[Ami]tvář \[F6]a~den stíhá \[C]den, 
+jenom blázen \[F]ostatním \[Dmi]v~cestě by \[G]stál 
 \[C]a ráno \[Ami]slunce \[F6]zahání \[C]sen, 
 jednou dokralu\[F]je i ten \[Dmi]největší \[G]král. 
 \endverse
