--- a/songs/kazdysinesesvebrime.tex
+++ b/songs/kazdysinesesvebrime.tex
@@ -44,24 +44,8 @@ to už zapomněl.
 %splní se vše
 %co jsi kdy chtěl
 %\endverse
-\beginref
+\beginstar
 \lrep Každý si nese své břímě \rrep \rep{3}
-\endverse
-\beginverse
-E I------------------------I
-H I-------2--------------3-I
-G I-----4-----4--------2---I
-D I---2-----2---2----4-----I
-A I-0--------------0-------I
-E I------------------------I
-\endverse
-\beginref
-E I---------0------2--------------0--------2-----I
-H I-----2--------------3------2----------3-----3-I
-G I-------4------2---2----------4------2-----2---I
-D I---2--------0------------2--------0-----------I
-A I-0---------------------0----------------------I
-E I----------------------------------------------I
 \endverse
 \minfrets=2
 \endsong
