--- a/songs/pohlidamtvujspanek.tex
+++ b/songs/pohlidamtvujspanek.tex
@@ -4,7 +4,7 @@
 \[Ami]Vždycky stál jsi hodně blízko, aby nebolel mě pád
 a \[G]tajemně jsi říkal: \uv{člověk \[Fmaj7]zjistí, kam ne\[Emi]patří}.
 Nikdy \[Ami]nebyl jsi ten frajer, co z písku staví hrad
-a \[G]z nafouknutejch frází jednu \[Fmaj7]střídá za \[Emi]druhou.
+a \[G]z~nafouknutejch frází jednu \[Fmaj7]střídá za \[Emi]druhou.
 \endverse
 \beginverse
 Pak s jarem jsi se ztratil a to ráno bylo zlý,
@@ -32,5 +32,8 @@ ty dáš mý dlaně zmrzlý do svý šály, ať nezebou.
 \endverse
 \beginref
 Já pohlídám tvůj spánek\ldots
+\endverse
+\beginplus
+tam kam tvý kroky jdou krajinou.
 \endverse
 \endsong
