--- a/songs/zabili.tex
+++ b/songs/zabili.tex
@@ -1,7 +1,7 @@
 \beginsong{Zabili}[by={Balada pro banditu}]
 \beginverse
 \[C]Zabili, \[F]zabili \[Dmi]chlapa z \[F]Kolo\[C]čavy, 
-\[C]řekněte \[F]hrobaři, \[Dmi]kde je \[F]pocho\[C]vaný. 
+\[C]řekněte \[F]hrobaři, \[Dmi]kde je pocho\[F]vaný.\[C]
 \endverse
 \beginref
 \[C]Bylo tu, není tu, havrani \[F]na plotu, 
