Pridana pisen je to zvlastni od Marien.

--- a/FF/songs.tex
+++ b/FF/songs.tex
@@ -12,6 +12,7 @@
 \input{songs/jastebouzitnebudu.tex}
 \input{songs/jeruzalem.tex}
 \input{songs/jestemichvilkuzpivej.tex}
+\input{songs/jetozvlastni.tex}
 \input{songs/kamen.tex}
 \input{songs/kazdysinesesvebrime.tex}
 \input{songs/kejklir.tex}
