Posledni upravy do sousoveho zpevniku.

--- a/songs/poharakalich.tex
+++ b/songs/poharakalich.tex
@@ -15,7 +15,7 @@ Palcem k zemi ukázal, ať další hranice hoří.
 \lrep Ta malá země už nemá co získat,
 teď bude tancovat, jak budu pískat.\rrep
 \endverse
-\beginverse
+\beginref
 \[Ami]Náhle se pozvedl \[D]vítr a mocně \[G]vál,
 o\[Ami]dněkud přinesl \[D]nápěv, sám si ho \[H7]hrál.
 \[Ami G Emi C H7 Emi]
