--- a/songs/zatrictvrtestoleti.tex
+++ b/songs/zatrictvrtestoleti.tex
@@ -25,7 +25,7 @@ taky \[Ami]pořádně se \[Ami/G]rozhlížej, než \[D9/F#]vejdeš na \[G]vozovk
 \beginverse
 To víno bude nejspíš ročník dva tisíce dvacet,
 s každým hltem budeš aspoň deset roků ztrácet,
-a když ti bude pětadvacet, bude sklenka prázdná
+a když ti bude pětadvacet, bude lahev prázdná
 a ty budeš jako dneska líznutá a krásná.
 \endverse
 \beginstar
