--- a/FF/songs.tex
+++ b/FF/songs.tex
@@ -24,12 +24,14 @@
 \input{songs/nechtenas.tex}
 \input{songs/panebozeodlaskyzachrannas.tex}
 \input{songs/pantarhei.tex}
+\input{songs/pocestny.tex}
 \input{songs/pohlidamtvujspanek.tex}
 \input{songs/potulnikejkliri.tex}
 \input{songs/prvnidamacountry.tex}
 \input{songs/sejdemesevpanu.tex}
 \input{songs/stranzatrati.tex}
 \input{songs/svetjevelkej.tex}
+\input{songs/svetsnamahoupa.tex}
 \input{songs/slapejdal.tex}
 \input{songs/tmavomodrysvet.tex}
 \input{songs/usmejsenasvet.tex}
