Opraveny chyby podle zpevniku spiritualu.

--- a/songs/pocestny.tex
+++ b/songs/pocestny.tex
@@ -1,10 +1,10 @@
 \beginsong{Pocestný}[by={Spirituál kvintet}]
 \beginverse
 \[A]Je to chůze \[A7]po~tom světě, \[D]kam se noha \[A]šine, 
-\lrep \[E]sotva pře\[C#7]jdeš \[F#mi]jedny ho\[D]ry, \[E]hned se najdou \[A]jiné.\rrep
+\lrep \[E]sotva pře\[C#7]jdeš \[F#mi]jedny ho\[D]ry, \[A/E]hned se naj\[E]dou \[A]jiné.\rrep
 \endverse
 \beginverse
-Je to chůze po tom světě, že by člověk utek', 
+Je to chůze po tom světě, že by člověk utek, 
 \lrep ještě nezažil jsi jeden, máš tu druhý smutek.\rrep
 \endverse
 \beginverse
