--- a/songs/svetsnamahoupa.tex
+++ b/songs/svetsnamahoupa.tex
@@ -1,39 +1,52 @@
 \beginsong{Svět s náma houpá}[by={Spirituál kvintet}]
 \beginverse
-\[C]Máš pech a děláš si vrásky,
-žena nemluví, \[Ami]kámoš se \[G]zdejch,
-\[F]svět s náma houpá, ale \[G]já dávno \[F]vím,
-že když se smějem, tak \[G]houpáme s \[C]ním.
+\[A]Máš pech a děláš si vrásky,
+žena nemluví, \[H9]kámoš se \[E]zdejch.
+\endverse
+\beginref
+\[D]Svět s náma houpá, ale \[A]já dávno \[F#7]vím,
+že když se \[Hmi7]smějem, tak \[A/E]houpá\[E7]me s \[A]ním.
 \endverse \beginverse
 Sám sedíš doma a vzdycháš,
-polykáš prášky a doktor, tvůj doktor je z tebe už paf,
-svět s náma houpá, ale já dávno vím,
-že když se smějem, tak houpáme s ním.
-\endverse \beginverse
+polykáš prášky a doktor, tvůj doktor je z tebe už paf.
+\endverse
+\beginref
+Svět s náma houpá\ldots
+\endverse
+\beginverse
 Pořád šetříš a pořád nic nemáš,
-jenom dluhy -- zato v dluzích -- to seš král,
+jenom dluhy -- zato v dluzích -- to seš král.
+\endverse
+\beginref
 Tenhle svět s náma houpá, až jde z toho hlava kolem, já to vím,
 když se smějem tak houpáme s ním.
-\endverse \beginverse
+\endverse
+\beginverse
 Když se mračíš, tak nevidíš pravdu (a to je zlý),
-pravdu velkou, větší, než je tvůj žal,
-tenhle svět s náma houpá, znáš to, houpá jako blázen, to já vím,
+pravdu velkou, větší, než je tvůj žal.
+\endverse
+\beginref
+Tenhle svět s náma houpá, znáš to, houpá jako blázen, to já vím,
 když se smějem, tak houpáme s ním.
-\endverse \beginref
-\[G]Náš táta nám \[C]říkal:
-\uv{\[G]je lepší slzet od smíchu, \[F]smíchem než od zlosti}
-\[F]svět s náma houpá, ale \[G]já dávno \[F]vím,
-že když se smějem, tak \[G]houpáme s \[C]ním.
-\endverse \beginverse
+\endverse
+\beginstar
+\[E]Náš táta nám \[A]říkal:
+\uv{\[E]je lepší slzet od smíchu, \[A]smíchem než od zlosti}
+\endverse
+\beginref
+Svět s náma houpá\ldots
+\endverse
+\beginverse
 Ten kdo vede nás touhletou cestou,
-vidí, kdo vzdychá a kdo žije rád,
+vidí, kdo vzdychá a kdo žije rád.
+\endverse
+\beginref
 Proto ať s náma svět houpá, jako bouře s loďkou ve vlnách, já to vím,
 když se smějem, tak my houpáme s ním.
-\endverse \beginstar
-\[C]Sám si říkej, sám si říkej,
-ty nemáš, proč se mračit,
-nemáš, proč se mračit,
-nemáš, proč se mračit,
+\endverse
+\beginstar
+\[A]Sám si říkej, sám si říkej,
+ty \lrep nemáš, proč se mračit,\rrep \rep{3}
 koukej, je to psáno,
 ty nemáš, proč se mračit\ldots
 \endverse
