Oprava podle zpevniku.

--- a/songs/tmavomodrysvet.tex
+++ b/songs/tmavomodrysvet.tex
@@ -1,7 +1,7 @@
 \beginsong{Tmavomodrý svět}[by={Voskovec, Werich, Ježek}]
 \rfloat{
 	\gtab{B9}{113311}\\
-	\gtab{E9}{022102}\\
+	\gtab{E9}{022132}\\
 	\gtab{Gmi6}{355353}\\
 	\gtab{D\textsuperscript{\#}dim}{004545}\\
 	\gtab{D9}{XX0230}
@@ -10,7 +10,7 @@
 \[D]Netoliko, \[B9]že je tma, \[D]ale \[B9]nev\[A7]idím\[D] \[A7]
 \[D]Vím, že je tu \[B9]všude tma, \[D]já ji \[A7]nevi\[D]dím
 \[B]Vidím jenom to, \[D]že nevidím nic
-\[B]když připustím, že vidím, měl bych \[E7]vidět \[A7]víc
+\[B]když připustím, že vidím, \[E9]měl bych \[E7]vidět \[A7]víc
 \[D]Svou hlavu, trup, \[B9]dvě ruce, \[E9]nohy nevi\[A7]dím
 \endverse
 \beginverse
